crates/swc_ecma_parser/tests/typescript-errors/instantiation-expr/case2/input.ts.stderr
error: Unexpected token `;`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/instantiation-expr/case2/input.ts:1:23
  |
1 | const b1 = f?.<number>;
  |                       ^

error: Expression expected
 --> $DIR/tests/typescript-errors/instantiation-expr/case2/input.ts:1:15
  |
1 | const b1 = f?.<number>;
  |               ^

